# XVNCViewer

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: roadmap.md
src/: App.tsx  novnc.d.ts  storage.ts  styles.css  types.ts  useVncSession.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  proxy.rs
