[package]
name = "xvncviewer"
version = "0.1.0"
description = "A local modern VNC viewer built on noVNC and system WebViews"
authors = ["Codex"]
edition = "2021"
license = "MIT"
repository = "https://github.com/KKeygen/XVNCViewer"

[lib]
name = "xvncviewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.28"
uuid = { version = "1", features = ["v4"] }
